Chapter08, 堆 Heap, 堆空间参数设置，小结